--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <a href="https://line.me/ti/g2/vfKhqYZNCLLyjGmBwArVQP-_KqPPWTMxen163g?utm_source=invitation&utm_medium=link_copy&utm_campaign=default" target="_blank">加入 LINE 群組</a>
         
         <div class="qr-code">
-            <img src="qrcode.png" alt="LINE 群組 QR Code">
+            <img src="./QRCODE.png" alt="LINE 群組 QR Code">
         </div>
     </div>
 </body>
