--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             padding: 30px;
             border-radius: 15px;
             box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-            max-width: 400px;
+            max-width: 500px;
             width: 100%;
         }
 
@@ -72,7 +72,7 @@
 <body>
     <div class="container">
         <h1>加入天堂2M-沙哈06：星空夜羽 LINE 社群</h1>
-        <p>加入時，請直接取遊戲ID名字方便找人辨識</p>
+        <p><strong>加入時，請直接取遊戲ID名字方便找人辨識</strong></p>
         <p>請點下方綠色按鈕進入或掃Qrcode</p>
         <a href="https://line.me/ti/g2/vfKhqYZNCLLyjGmBwArVQP-_KqPPWTMxen163g?utm_source=invitation&utm_medium=link_copy&utm_campaign=default" target="_blank">加入 LINE 群組</a>
         
